Cleaning code Suppressing Serialized Warnings

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ITII_P10_2013_00</name>
+	<name>2016_ITII_P13_TP</name>
 	<comment></comment>
 	<projects>
 	</projects>
